--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -5,11 +5,7 @@
 {% endblock %}
 {% block content %}
 <article>
-  <ul>
-    <li>Место: {{ post.location }}</li>
-    <li>Дата: {{ post.date }}</li>
-    <li>Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a></li>
-  </ul>
+  {% include "includes/post.html" %}
   <p>{{ post.text }}</p>
 </article> 
 {% endblock %}
