--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -8,11 +8,8 @@
 
 {% for post in posts %}
   <article>
-    <ul>
-      <li>Место: {{ post.location }}</li>
-      <li>Дата: {{ post.date }}</li>
-      <li>Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>
-    </ul>          
+    {# Здесь тоже можно вывести пост через отдельный шаблон #}
+    {% include "includes/post.html" %} 
     <p>{{ post.text|truncatewords:10 }}</p>
     <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
   </article>
